Fix(Forms) Added margin top for better readability

--- a/movie-app/src/app/auth/components/account-recovery/request-reset-password/request-reset-password.component.scss
+++ b/movie-app/src/app/auth/components/account-recovery/request-reset-password/request-reset-password.component.scss
@@ -41,6 +41,8 @@
 }
 
 .form-actions {
+  margin-top: 24px;
+
   color: $grey-medium;
 
   @include button-fonts-smaller;
